# ds_api

./: Dockerfile  README.MD  auth.py  load.py  main.py  pyproject.toml  requirements.txt
db/: users_db.py
src/: main.py  schemas.py
src/utils/: auth.py  load.py  sample.py  schemas.py
src/utils/db/: .secret.txt  load.py  users_db.txt
