[tool.poetry]
name = "ds-api"
version = "0.1.0"
description = ""
authors = ["jc <cjean90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
httptools = "^0.6.1"
uvloop = "^0.19.0"
uvicorn = "^0.28.1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pylint = "^3.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
